expr editor: fixed delete expr btn alignment

--- a/webapp/commonComponents/expression/editor/editor.scss
+++ b/webapp/commonComponents/expression/editor/editor.scss
@@ -29,6 +29,7 @@
 .expression-editor__expr-container {
   overflow: auto;
   padding-bottom: 2rem;
+  position: relative;
 
   //common
   .btns {
